--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -20,23 +20,25 @@
 
 \section{Contact Information}
 \textbf{Address:}\\
-National Center for Cognitive Behavior Therapy and Research,\\
-National Center of Neurology and Psychiatry\\
-4-1-1 Ogawa-Higashi,\\
-Kodaira,Tokyo 187-8551\\
+College of Education, Psychology, \& Social Work,\\
+Flinders University\\
+Sturt Rd, Bedford Park,\\
+South Australia 5042\\
 \\
 \textbf{E-mail address:}\\	
 toshitaka.hamamura[@]gmail.com\\
+toshitaka.hamamura[@]flinders.edu\\
 thamamura[@]ncnp.go.jp\\
 
 \section{Professional Position}
 \begin{itemize}
-	\item 2017/04---2019/03: \textbf{Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
+	\item 2017/04---2019/03: \textbf{JSPS Research Fellow (DC2)}, Japan Society for the Promotion of Science (Host Institution: University of Tokyo)
 	\item 2019/04---2020/03: \textbf{Associate Researcher}, KDDI Research, Inc.
-	\item 2020/04---present: \textbf{Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
+	\item 2020/04---2023/03: \textbf{JSPS Research Fellow (PD)}, Japan Society for the Promotion of Science (Host Institution: National Center of Neurology and Psychiatry)
+	\item 2023/04---present: \textbf{JSPS Overseas Research Fellow}, Japan Society for the Promotion of Science (Host Institution: Flinders University)
 \end{itemize}
 
-\section{Other Positions and Affiliations}
+\section{Other Position and Affiliation}
 \begin{itemize}
 	\item 2020/04---present: \textbf{JSPS Research Fellow}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry
 	\item 2020/04---present: \textbf{Invited Researcher}, KDDI Research, Inc.
@@ -63,8 +65,9 @@ thamamura[@]ncnp.go.jp\\
 	\item 2016---2017: \textbf{Mental Health Worker}, Taito City Health Center, Tokyo, Japan
 	\item 2017---2018: \textbf{Staff Counselor}, Student Support Office, Graduate School of Science, University of Tokyo, Japan
 	\item 2018---2019: \textbf{Staff Counselor}, Support Room, Graduate School of Economics, University of Tokyo, Japan
-	\item 2019---present: \textbf{Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry, Japan
-	\item 2020---present: \textbf{Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
+	\item 2019---2023: \textbf{Clinical Psychologist}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry, Japan
+	\item 2020---2023: \textbf{Clinical Psychologist}, Psychiatric Unit, Tokyo Medical and Dental University, Japan
+	\item 2023---present: \textbf{Clinical Psychologist}, Private practice
 \end{itemize}
 
 \section{Teaching Experience}
@@ -150,10 +153,11 @@ thamamura[@]ncnp.go.jp\\
 	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
 	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
 	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
+	\item 2020---2024: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
 	\item 2020---2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
-	\item 2020---2023: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
-	\item 2021---2024: Grant-in-Aid for Scientific Research, Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
+	\item 2021---2024: Grant-in-Aid for Scientific Research (C), Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
 	\item 2022---2023: Reiwa 4 nendo shougaisha sougou fukusi suishin jigyouhi hojyo kin, Ministry of Health, Labour and Welfare. Gyanburu tou izonshou mondai no jittai chousa no jisshi houhou no sakutei ni kakaru kentou. (Co-investigator).
+	\item 2023---2027: Grant-in-Aid for Scientific Research (B), Japan Society for the Promotion of Science. Evaluating the effectiveness of cognitive behavioral therapy for problematic use of the internet and video gaming. (Principal investigator). Grant amount: ¥11,960,000
 	\end{description}
 
 \section{Society Affiliation}
@@ -169,10 +173,11 @@ thamamura[@]ncnp.go.jp\\
 
 \section{Manuscript Review}
 \begin{itemize}
-	\item International Journal of Mental Health and Addiction (6)
-	\item Journal of Occupational Health (3)
-	\item Psychology Research and Behavior Management (1)
-	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace (1)
+	\item Addictive Behaviors Reports
+	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
+	\item International Journal of Mental Health and Addiction
+	\item Journal of Occupational Health
+	\item Psychology Research and Behavior Management 
 \end{itemize}
 
 \section{Award}
