--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,25 +10,28 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2023年2月4日}
+\date{2023年5月6日}
 \maketitle
 
 \noindent
 \section{氏名}
 浜村\ 俊傑（ハマムラ\ トシタカ, Hamamura, Toshitaka）
 \section{現所属}
-日本学術振興会　特別研究員（PD）\\
-国立研究開発法人国立精神・神経医療研究センター　認知行動療法センター\\
-株式会社KDDI総合研究所　健康医療グループ\\~\\
+College of Education, Psychology, \& Social Work,\\
+Flinders University\\
+Sturt Rd, Bedford Park,\\
+South Australia 5042\\~\\
 \textbf{E-mailアドレス}\\
+toshitaka.hamamura[@]gmail.com\\
+toshitaka.hamamura[@]flinders.edu\\
 thamamura[@]ncnp.go.jp\\
-toshitaka.hamamura[@]gmail.com
 
 \section{職歴}
 \begin{description}
 	\item 2017年04月～2019年03月： 日本学術振興会 特別研究員（DC2）（受入機関／東京大学）
 	\item 2019年04月～2020年03月： 株式会社KDDI総合研究所　有期契約社員（ポスドク研究員）
-	\item 2020年04月～現在： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
+	\item 2020年04月～2023年03月： 日本学術振興会 特別研究員（PD）（受入機関／国立精神・神経医療研究センター）
+	\item 2023年04月～現在： 日本学術振興会 海外特別研究員（受入機関／フリンダーズ大学）
 \end{description}
 
 \section{その他の職歴・所属歴}
@@ -60,8 +63,9 @@ toshitaka.hamamura[@]gmail.com
 	\item 2016年〜2019年： \textbf{相談員（実習生）}，相談室，教育学研究科，東京大学
 	\item 2017年〜2018年： \textbf{相談員（非常勤）}，学生支援室，理学系研究科，東京大学
 	\item 2018年〜2019年： \textbf{相談員（非常勤）}, サポートルーム，経済学研究科，東京大学
-	\item 2019年〜現在： \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
-	\item 2020年〜現在： \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
+	\item 2019年〜2023年： \textbf{心理師（受入研究員）}，国立精神・神経医療研究センター認知行動療法センター
+	\item 2020年〜2023年： \textbf{心理師（受入研究員）}，東京医科歯科大学精神科ネット依存外来
+	\item 2020年〜現在： \textbf{臨床心理士・公認心理師}，個人事業
 	\end{description}
 
 \section{担当したことのある科目}
@@ -162,17 +166,19 @@ toshitaka.hamamura[@]gmail.com
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：問題飲酒を低減するマルチメソッド・アプローチ：心理学理論の応用に着目して　(研究代表者) ¥650,000
 	\item 2018年07月〜2019年03月： 東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム題目：精神疾患予防に向けて生体情報を用いたモニタリングシステムの開発　(研究代表者) ¥650,000
 	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（若手研究）題目：Understanding and Reducing Emotional Difficulties in Gaming Disorder　(研究代表者)　¥3,200,000
-	\item 2020年04月〜現在： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
+	\item 2020年04月〜2023年03月： 日本学術振興会 科学研究費助成事業（特別研究員奨励費）題目：思春期における行動依存への支援と関連障害の解明　(研究代表者) ¥3,700,000
 	\item 2021年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｃ）題目：児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明　(研究分担者) ¥3,900,000
 	\item 2022年11月〜現在： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
+	\item 2023年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者者)　¥11,960,000
 \end{description}
 
 \section{査読歴}
 	\begin{enumerate}
-	\item International Journal of Mental Health and Addiction (6)
-	\item Journal of Occupational Health (3)
-	\item Psychology Research and Behavior Management (1)
-	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace (1)
+	\item Addictive Behaviors Reports
+	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
+	\item International Journal of Mental Health and Addiction
+	\item Journal of Occupational Health
+	\item Psychology Research and Behavior Management 
 \end{enumerate}
 \section{賞罰}
 \begin{description}
