--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -175,6 +175,7 @@ thamamura[@]ncnp.go.jp\\
 \begin{itemize}
 	\item Addictive Behaviors Reports
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
+	\item INQUIRY
 	\item International Journal of Mental Health and Addiction
 	\item Journal of Occupational Health
 	\item Psychology Research and Behavior Management 
