--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -177,6 +177,7 @@ thamamura[@]ncnp.go.jp\\
 	\item Addictive Behaviors Reports
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item International Journal of Mental Health and Addiction
+	\item INQUIRY
 	\item Journal of Occupational Health
 	\item Psychology Research and Behavior Management 
 \end{enumerate}
