--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -20,15 +20,11 @@
 
 \section{Contact Information}
 \textbf{Address:}\\
-College of Education, Psychology, \& Social Work,\\
-Flinders University\\
-Sturt Rd, Bedford Park,\\
-South Australia 5042\\
+College of Education, Psychology, \& Social Work, Flinders University\\
+Sturt Rd, Bedford Park, South Australia 5042\\
 \\
 \textbf{E-mail address:}\\	
-toshitaka.hamamura[@]gmail.com\\
-toshitaka.hamamura[@]flinders.edu\\
-thamamura[@]ncnp.go.jp\\
+hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 
 \section{Professional Position}
 \begin{itemize}
@@ -88,9 +84,10 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
 	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
 	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. Addictive Behaviors Reports, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese Psychological Research. \url{https://doi.org/10.1111/jpr.12408}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (in press). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. BMC Psychology. \url{https://doi.org/10.31234/osf.io/2uzsd}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}.
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -130,32 +127,32 @@ thamamura[@]ncnp.go.jp\\
 	\item \underline{Hamamura, T.}, Mearns, J. (2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September8--November 2). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.} (2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
-	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependance different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Chiba, T., Kawashima, I., Sakai, Y., Tanaka, S., Yoneyama, A. (2020, November). How is high smartphone dependence different from high smartphone use? Comparisons on personality and daily activities. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2020, held online.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Miyake, Y., Oka, T., Chiba, T., Honjo, M. Yoneyama, A. (2021, September). Has smartphone addiction changed during the pandemic?. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
-	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
+	\item \underline{Hamamura, T.}, Kitamura, M., Asano, H., Honjo, M. Yoneyama, A. (2021, December). A digital intervention to prevent problematic smartphone use: Development and a pilot trial of a smartphone application for children and parents. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2021, held online.
 	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
-	\item \underline{Hamamura, T.}, Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internatilizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
+	\item \underline{Hamamura, T.}, Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internalizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
 \end{enumerate}
 
 \section{Other Publication}
 	\begin{enumerate}
-		\item \underline{Hamamura, T.} (2019). Literature introducation: Is smartphone addiction really an addiction? (Panova, T. \& Carbonell, X., 2018) Japanese Journal of Psychotherapy, p.602-603
+		\item \underline{Hamamura, T.} (2019). An article summary: Is smartphone addiction really an addiction? (Panova, T. \& Carbonell, X., 2018) Japanese Journal of Psychotherapy, p.602-603
 		\item \underline{Hamamura, T.} (2020). Book review: Treatment for substance use disorder (Matsumoto, T., 2020). Japanese Journal of Psychotherapy, p.715
 	\end{enumerate}
 
-\section{Funded Research and Grant}
+\section{Grant Activities}
 \begin{description}
 	\item 2016---2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects on Virtual Reality Facial Feedback on Affect and Autobiographical Memory. (Group Project; Principal Investigator). Grant amount: ¥1,500,000
 	\item 2016---2017: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Effects of Self-Record Smartphone Application on Psychological Symptoms and Drinking Consumption. (Individual Project; Principal Investigator). Grant amount: ¥300,000
 	\item 2017---2019: Grant-in-Aid for JSPS Fellows (DC2), Japan Society for the Promotion of Science. The Cultural and Developmental Role of Negative Mood Regulation Expectancies. (Individual Project; Principal Investigator). Grant amount: ¥2,100,000
 	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Understanding Mechanisms and Functionality of Self-Monitoring App and its Application in Clinical Settings. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator).Grant amount: ¥300,000
-	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
-	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
+	\item 2017---2018: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Examining Effects of ICT-based Educational Program Using Feedback with Mobile Devices for Reducing Heavy Drinking. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Multi-method approaches for reducing problem drinking: Focusing on the application of psychological theories. (Individual Project; Principal Investigator). Grant amount: ¥300,000
+	\item 2018---2019: The University of Tokyo, Graduate Program for Social ICT Global Creative Leaders. Development of a monitoring system using physiological measures for the prevention of psychiatric disorders. (Group Project; Principal Investigator). Grant amount: ¥650,000
 	\item 2020---2024: Grant-in-Aid for Early-career Scientists, Japan Society for the Promotion of Science. Understanding emotional Difficulties in gaming disorder. (Individual Project; Principal Investigator). Grant amount: ¥3,700,000
 	\item 2020---2023: Grant-in-Aid for JSPS Fellows (PD), Japan Society for the Promotion of Science. Comorbidities of and interventions for behavioral addiction among adolescents. (Individual Project; Principal Investigator). Grant amount: ¥4,160,000
-	\item 2021---2024: Grant-in-Aid for Scientific Research (C), Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gamijng disorder among children and youth. (Co-investigator).
+	\item 2021---2024: Grant-in-Aid for Scientific Research (C), Japan Society for the Promotion of Science. Understanding the pathology and psychosocial risk factors of internet gaming disorder among children and youth. (Co-investigator).
 	\item 2022---2023: Reiwa 4 nendo shougaisha sougou fukusi suishin jigyouhi hojyo kin, Ministry of Health, Labour and Welfare. Gyanburu tou izonshou mondai no jittai chousa no jisshi houhou no sakutei ni kakaru kentou. (Co-investigator).
 	\item 2023---2027: Grant-in-Aid for Scientific Research (B), Japan Society for the Promotion of Science. Evaluating the effectiveness of cognitive behavioral therapy for problematic use of the internet and video gaming. (Principal investigator). Grant amount: ¥11,960,000
 	\end{description}
@@ -171,7 +168,7 @@ thamamura[@]ncnp.go.jp\\
 %	\item Society for Personality and Social Psychology
 \end{itemize}
 
-\section{Manuscript Review}
+\section{Ad Hoc Review}
 \begin{itemize}
 	\item Addictive Behaviors Reports
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
