--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -1,16 +1,11 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 %----packages----%
 \usepackage{geometry}
 \usepackage{hanging}
 \usepackage{url}
 %\usepackage{pagecolor}
 \usepackage{geometry}
-	\geometry{
-		a4paper,
-		total={170mm,257mm},
-		left=20mm,
-		top=20mm,
-	}
+	\geometry{total={170mm,257mm}, left=20mm, top=20mm}
 
 \begin{document}
 \sloppy
@@ -18,13 +13,14 @@
 \author{Toshitaka (Toshi) Hamamura}
 \maketitle
 
-\section{Contact Information}
+\section{Contact}
 \textbf{Address:}\\
 College of Education, Psychology, \& Social Work, Flinders University\\
 Sturt Rd, Bedford Park, South Australia 5042\\
 \\
 \textbf{E-mail address:}\\	
-hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
+toshitaka.hamamura@flinders.edu.au
+%hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 
 \section{Professional Position}
 \begin{itemize}
@@ -87,7 +83,7 @@ hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}.
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -103,16 +99,18 @@ hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 \section{Academic Presentation}
 \subsection{International Conference}
 \begin{enumerate}
-	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students.} Poster presented at Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
-	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students.} Poster presented at International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor.} The 31st International Congress of Psychology, Yokohama. (Poster)
+	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
+	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
-	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
-	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression.} Poster presented at International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
+	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 \end{enumerate}
 
 \subsection{Domestic Conference}
@@ -161,8 +159,8 @@ hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 \begin{itemize}
 	\item Association of Japanese Clinical Psychology
 %	\item Association for Psychological Science
-%	\item Japanese Medical Society of Alcohol and Addiction Studies
-	\item Japanese Psychological Association
+	\item Japanese Medical Society of Alcohol and Addiction Studies
+%	\item Japanese Psychological Association
 	\item Japanese Society of Alcohol-Related Problems
 %	\item Research Society on Alcoholism
 %	\item Society for Personality and Social Psychology
@@ -170,6 +168,7 @@ hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 
 \section{Ad Hoc Review}
 \begin{itemize}
+	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item INQUIRY
@@ -178,11 +177,14 @@ hamamura@19.alumni.u-tokyo.ac.jp (Emails will be forwarded to my active account)
 	\item Psychology Research and Behavior Management 
 \end{itemize}
 
-\section{Award}
-	\begin{itemize}
-		\item 2017: The 6th Kosugi Memorial Award (Distinguished Poster Presentation Award); Japanese Society of Alcohol-related Problems.
-		\item 2021: Distinguished Presence Award, KDDI Research, Inc. (Co-investigator)
-		\item 2022: Young Scholar Outstanding Presentation Award (Oral presentation),  The 22nd Annual Convention of Japanese Association for Cognitive Therapy
-	\end{itemize}
-
+\section{Award and Fellowship}
+	\begin{description}
+		\item 2017/04: \textbf{Doctoral Course (DC) Research Fellowship for Young Scientists}, Japan Society for the Promotion of Science
+		\item 2017/09: \textbf{The 6th Kosugi Memorial Award (Distinguished Poster Presentation Award)}; Japanese Society of Alcohol-related Problems.
+		\item 2020/04: \textbf{Postdoctoral (PD) Research Fellowship for Young Scientists}, Japan Society for the Promotion of Science
+		\item 2021/03: \textbf{Distinguished Presence Award}, KDDI Research, Inc. (Co-investigator)
+		\item 2022/10: \textbf{Young Scholar Outstanding Presentation Award (Oral presentation)}, The 22nd Annual Convention of Japanese Association for Cognitive Therapy
+		\item 2022/04: \textbf{Overseas Research Fellowship}, Japan Society for the Promotion of Science
+	\end{description}
+	
 \end{document}
