--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,7 +10,7 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2023年5月6日}
+\date{2023年10月3日}
 \maketitle
 
 \noindent
@@ -19,12 +19,11 @@
 \section{現所属}
 College of Education, Psychology, \& Social Work,\\
 Flinders University\\
-Sturt Rd, Bedford Park,\\
-South Australia 5042\\~\\
+Sturt Rd, Bedford Park, South Australia 5042\\~\\
 \textbf{E-mailアドレス}\\
-toshitaka.hamamura[@]gmail.com\\
 toshitaka.hamamura[@]flinders.edu\\
-thamamura[@]ncnp.go.jp\\
+hamamura[@]19.alumni.u-tokyo.ac.jp\\
+%thamamura[@]ncnp.go.jp\\
 
 \section{職歴}
 \begin{description}
@@ -37,9 +36,9 @@ thamamura[@]ncnp.go.jp\\
 \section{その他の職歴・所属歴}
 \begin{description}
 	\item 2019年04月～2020年03月： 国立精神・神経医療研究センター　認知行動療法センター　研究生
+	\item 2022年12月～2023年1月：国立台湾大学心理学部　Visiting Scholar
 	\item 2020年04月～現在： 国立精神・神経医療研究センター　認知行動療法センター　外来研究員
 	\item 2020年04月～現在： 株式会社KDDI総合研究所　招聘研究員
-	\item 2022年12月～2023年1月：国立台湾大学心理学部　Visiting Scholar
 \end{description}
 
 \section{学歴}
@@ -96,9 +95,9 @@ thamamura[@]ncnp.go.jp\\
 	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
 	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. Japanese \textit{Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (in press). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}.
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
@@ -112,16 +111,18 @@ thamamura[@]ncnp.go.jp\\
 
 \section{国際学会・シンポジウム等における発表}
 \begin{enumerate}
-	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students.} Poster presented at Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
-	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students.} Poster presented at International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor.} The 31st International Congress of Psychology, Yokohama. (Poster)
+	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
+	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment.} The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
-	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation.} Poster presented at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
-	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers.} Poster presented at the International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents.} Poster presented at 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction.} Presented at IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
-	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression.} Poster presented at International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
+	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 \end{enumerate}
 
 \section{国内学会・シンポジウム等における発表}
@@ -159,6 +160,9 @@ thamamura[@]ncnp.go.jp\\
 \begin{enumerate}
 	\item 浜村\ 俊傑（2020年9月5日）．デジタル機器と子どものネット依存について．サンライズ・クリスチャン・チャーチ
 	\item 浜村\ 俊傑（2021年6月9日）．心理学を覗いてみたいあなたへ〜学問の紹介とインターネット依存のお話〜．国際基督教大学高等学校マルチイベント
+	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-スマートフォンはどのくらいまでなら使っていいのですか？．東進ハイスクール．\url{https://protect-au.mimecast.com/s/QRZtCQnMAlCN8wNRTxjJE_?domain=toshin.com}
+	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-スマホをついいじってしまうのですが、どうすればこの癖を治せますか。．東進ハイスクール．\url{https://protect-au.mimecast.com/s/Tjj0CRON8mfgJ3gOUNYEt8?domain=toshin.com}
+	\item 浜村\ 俊傑（2023年8月8日）．悩み相談Q\&A-勉強とは関係のないサイトまで見てしまい勉強が進みません。．東進ハイスクール．\url{https://protect-au.mimecast.com/s/HmJHCVARJqSP7pPZFyaaEr?domain=toshin.com}
 \end{enumerate}
 
 \section{競争的研究費}
@@ -179,6 +183,7 @@ thamamura[@]ncnp.go.jp\\
 
 \section{査読歴}
 	\begin{enumerate}
+	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item International Journal of Mental Health and Addiction
