--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -3,6 +3,8 @@
 \usepackage{geometry}
 \usepackage{hanging}
 \usepackage{url}
+\usepackage{hyperref}
+%\usepackage{xurl} % url over the page break
 %\usepackage{pagecolor}
 \usepackage{geometry}
 	\geometry{total={170mm,257mm}, left=20mm, top=20mm}
@@ -107,7 +109,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
 	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. \url{https://doi.org/10.1109/HEALTHCOM49281.2021.9398974}
 	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
