--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -113,6 +113,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023, May 12--14). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
 \end{enumerate}
 
 \subsection{Domestic Conference}
@@ -133,6 +134,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item Kobayashi, N., Jitoku, D., Nakajima, R., \underline{Hamamura, T.}, Honjo, M., Sugihara, G., Takahashi, H. (2022, December). Relationships between problematic internet and gaming use and bone density in outpatients. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internalizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
+ 	\item Ono, K., Tokushige, M., Hiratani, M., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Fujisato. H., Ito, M., Takano. A. (2023, October 13--15). \textit{Reliability and validity of a Japanese version of the Internet Gaming Disorder Scale for Children (IGDS-C)} [Oral presentation]. The Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2023.
 \end{enumerate}
 
 \section{Other Publication}
