--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,7 +10,7 @@
 
 \begin{document}
 \title{Curriculum Vitae}
-\date{2023年10月3日}
+\date{2023年10月24日}
 \maketitle
 
 \noindent
@@ -123,6 +123,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
 	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023, May 12--14). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
 \end{enumerate}
 
 \section{国内学会・シンポジウム等における発表}
@@ -148,6 +149,7 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 小林\ 七彩・治徳\ 大介・中島\ 涼子・\underline{浜村\ 俊傑}・本庄\ 勝・杉原\ 玄一・高橋\ 英彦（2022年9月9日）．ネット・ゲームの問題を抱える患者と骨密度との関連．2022年度日本アルコール・アディクション医学会学術総会（口頭）
 	\item \underline{浜村\ 俊傑}・小林\ 七彩・治徳\ 大介・中島\ 涼子・高橋\ 英彦・本庄\ 勝（2022年9月9日）．スマートフォン問題使用の客観的測定にむけて：臨床データを用いた実態把握．2022年度日本アルコール・アディクション医学会学術総会（口頭）
 	\item \underline{浜村\ 俊傑}・金子\ 響介・伊藤\ 正哉（2022年11月11日）．児童・青年におけるゲーム行動症の内在化症状および家族機能との関連．第22回日本認知療法・認知行動療法学会．（口頭）
+	\item 大野\ 昴紀・徳重\ 誠・平谷\ 七美・金子\ 響介・\underline{浜村\ 俊傑}・宮本\ 有紀・館農\ 勝・藤里\ 紘子・伊藤\ 正哉・高野\ 歩（2023年10月15日）．日本語版 Internet Gaming Disorder Scale for Children (IGDS-C) の信頼性と妥当性の検証．2023年度日本アルコール・アディクション医学会学術総会（口頭）
 \end{enumerate}
 
 \section{学術雑誌等又は商業誌における解説，総説}
