--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -103,8 +103,8 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 \section{学術論文・プレプリント（査読なし）}
 \begin{enumerate}
 	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村杏奈・下山晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，22-29．
-	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要, 41，34-41．
-	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要, 42．
+	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原祐理・大賀真伊・鈴木拓朗・小林奈央・下山晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要，41，34-41．
+	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李智慧・下山晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要，42，p.31-38
 	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
 	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
 \end{enumerate}
@@ -154,8 +154,9 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 
 \section{学術雑誌等又は商業誌における解説，総説}
 \begin{enumerate}
-	\item \underline{浜村\ 俊傑}．（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」精神療法，p.602-603
-	\item \underline{浜村\ 俊傑}．（2020）．書評：松本俊彦（著）「物質使用障害の治療」精神療法，p.715
+	\item \underline{浜村\ 俊傑}（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」\ 精神療法，p.602-603
+	\item \underline{浜村\ 俊傑}（2020）．書評：松本俊彦（著）「物質使用障害の治療」\ 精神療法，p.715
+	\item \underline{浜村\ 俊傑}（2023）．「アルコール依存症に対するデジタル介入の現状」精神科治療学　第38巻増刊号．
 \end{enumerate}
 
 \section{その他（アウトリーチ活動等）}
@@ -182,6 +183,11 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 	\item 2022年11月〜現在： 厚生労働省　障害者総合福祉推進事業費補助金：ギャンブル等依存症問題の実態調査の実施方法の策定に係る検討(研究分担者)
 	\item 2023年04月〜現在： 日本学術振興会 科学研究費助成事業（基盤Ｂ）題目：インターネット・ゲームの問題使用に対する認知行動療法の有効性検証　(研究代表者者)　¥11,960,000
 \end{description}
+
+\section{特許}
+\begin{enumerate}
+	\item 株式会社ＫＤＤＩ総合研究所．伊藤\ 雅秋，田島\ 優輝，石坂\ 理人，\underline{浜村\ 俊傑}，上野\ 豊．暗記カード作成装置、暗記カード表示装置、暗記カード作成プログラム、及び暗記カード表示プログラム．特開2021-135423．2021-09-13．
+\end{enumerate}
 
 \section{査読歴}
 	\begin{enumerate}
