--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -84,8 +84,8 @@ toshitaka.hamamura@flinders.edu.au
 	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
 	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}. \url{https://doi.org/10.31234/osf.io/2uzsd}
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (in press). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}, 11, 78. \url{https://doi.org/10.1186/s40359-023-01095-5}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}, 147, 107834. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -93,9 +93,8 @@ toshitaka.hamamura@flinders.edu.au
 	\item Ueda, M., \underline{Hamamura, T.}, Nakamura, A., \& Shimoyama, H. (2017). The application of animal research on the gene-environment interaction: A review. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 40, 22-29.
 	\item Uchimura, Y., \underline{Hamamura, T.}, Kitahara, Y., Oka, M., Suzuki, T., Kobayashi, N., \& Shimoyama, H., (2018). A Review on the population approach using Acceptance and commitment therapy: Increase of well-being and prevention effects. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 41, 34-41.
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. medRxiv. \url{https://doi.org/110.1101/2020.12.15.20246819}
-	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. OSF Preprints. \url{https://doi.org/10.31219/osf.io/g9ep7}
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023, January 18). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. OSF Preprints. \url{https://doi.org/10.31219/osf.io/krw65}
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. \textit{medRxiv}. \url{https://doi.org/110.1101/2020.12.15.20246819}
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
 \end{enumerate}
 	 
 \section{Academic Presentation}
